--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,11 +1,12 @@
 {
-	"name": "web",
+	"name": "@trektoiec/web",
 	"private": true,
 	"type": "module",
 	"scripts": {
 		"build": "vite build",
 		"serve": "vite preview",
-		"dev": "vite dev --port=3001"
+		"dev": "vite dev --port=3001",
+		"check-types": "tsc --noEmit"
 	},
 	"dependencies": {
 		"@diceui/checkbox-group": "^0.7.2",
@@ -43,6 +44,7 @@
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.556.0",
 		"next-themes": "^0.4.6",
+		"nitro": "^3.0.1-alpha.1",
 		"radix-ui": "^1.4.2",
 		"react": "19.1.2",
 		"react-dom": "19.1.2",
