refactor: Remove sidebar components and related files feat: Add type checking script to package.json for multiple packages

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,7 +14,8 @@
 		"db:studio": "drizzle-kit studio",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate",
-		"db:pull": "drizzle-kit pull"
+		"db:pull": "drizzle-kit pull",
+		"check-types": "tsc --noEmit"
 	},
 	"devDependencies": {
 		"drizzle-kit": "^0.31.2",
