--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -20,6 +20,7 @@
 	},
 	"registries": {
 		"@blocks": "https://blocks.so/r/{name}.json",
-		"@diceui": "https://diceui.com/r/{name}.json"
+		"@diceui": "https://diceui.com/r/{name}.json",
+		"@magicui": "https://magicui.design/r/{name}.json"
 	}
 }
