--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
 		"@orpc/server": "catalog:",
 		"@orpc/tanstack-query": "^1.10.0",
 		"@orpc/zod": "catalog:",
+		"@phosphor-icons/react": "^2.1.10",
 		"@radix-ui/react-accordion": "^1.2.12",
 		"@radix-ui/react-alert-dialog": "^1.1.15",
 		"@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -62,7 +63,6 @@
 		"embla-carousel-react": "^8.6.0",
 		"framer-motion": "^12.23.25",
 		"input-otp": "^1.4.2",
-		"lucide-react": "^0.556.0",
 		"motion": "^12.23.25",
 		"next-themes": "^0.4.6",
 		"nitro": "^3.0.1-alpha.1",
@@ -80,6 +80,7 @@
 		"tailwindcss": "^4.1.3",
 		"tw-animate-css": "^1.2.5",
 		"vaul": "^1.1.2",
+		"vite-plugin-barrel": "^0.4.1",
 		"vite-tsconfig-paths": "^5.1.4",
 		"zod": "^4.1.13"
 	},
