feat: Add NProgress component for loading indicators and update styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
   "[typescript]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
-  "[json]": {
+  "[typescriptreact]": {
     "editor.defaultFormatter": "biomejs.biome"
-  }
+  },
 }
