--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -66,6 +66,7 @@
 		"motion": "^12.23.25",
 		"next-themes": "^0.4.6",
 		"nitro": "^3.0.1-alpha.1",
+		"nprogress": "^0.2.0",
 		"pg": "^8.14.1",
 		"radix-ui": "^1.4.2",
 		"react": "19.1.2",
@@ -88,6 +89,7 @@
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.2.0",
 		"@trektoiec/config": "workspace:*",
+		"@types/nprogress": "^0.2.3",
 		"@types/react": "~19.1.10",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^5.0.4",
