--- a/turbo.json
+++ b/turbo.json
@@ -58,6 +58,8 @@
 		"BACKBLAZE_REGION",
 		"GOOGLE_CLIENT_ID",
 		"GOOGLE_CLIENT_SECRET",
-		"UNOSEND_API_KEY"
+		"UNOSEND_API_KEY",
+		"TOIECMAX_APP_MIX",
+		"TOIECMAX_API_URL"
 	]
 }
