--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@trektoiec",
+	"name": "@trektoeic",
 	"private": true,
 	"type": "module",
 	"workspaces": {
@@ -24,23 +24,26 @@
 		"check-types": "turbo check-types",
 		"dev:native": "turbo -F native dev",
 		"dev:web": "turbo -F web dev",
-		"db:push": "turbo -F @trektoiec/db db:push",
-		"db:studio": "turbo -F @trektoiec/db db:studio",
-		"db:generate": "turbo -F @trektoiec/db db:generate",
-		"db:migrate": "turbo -F @trektoiec/db db:migrate",
-		"db:pull": "turbo -F @trektoiec/db db:pull",
-		"dev:mailer": "turbo -F @trektoiec/mailer dev:mailer"
+		"db:push": "turbo -F @trektoeic/db db:push",
+		"db:studio": "turbo -F @trektoeic/db db:studio",
+		"db:generate": "turbo -F @trektoeic/db db:generate",
+		"db:migrate": "turbo -F @trektoeic/db db:migrate",
+		"db:pull": "turbo -F @trektoeic/db db:pull",
+		"dev:mailer": "turbo -F @trektoeic/mailer dev:mailer",
+		"with-script": "dotenv -e apps/web/.env -- tsx"
 	},
 	"dependencies": {
 		"dotenv": "^17.2.2",
+		"dotenv-cli": "^11.0.0",
 		"zod": "^4.1.11"
 	},
 	"devDependencies": {
-		"turbo": "^2.5.4",
 		"@biomejs/biome": "^2.2.0",
+		"@types/node": "^22.13.11",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.1.2",
-		"@types/node": "^22.13.11"
+		"tsx": "^4.21.0",
+		"turbo": "^2.5.4"
 	},
 	"lint-staged": {
 		"*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
