--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@trektoiec/api",
+	"name": "@trektoeic/api",
 	"exports": {
 		".": {
 			"default": "./src/index.ts"
@@ -13,7 +13,7 @@
 		"check-types": "tsc --noEmit"
 	},
 	"devDependencies": {
-		"@trektoiec/config": "workspace:*"
+		"@trektoeic/config": "workspace:*"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
@@ -24,7 +24,7 @@
 		"@orpc/openapi": "catalog:",
 		"@orpc/zod": "catalog:",
 		"zod": "^4.1.11",
-		"@trektoiec/auth": "workspace:*",
-		"@trektoiec/db": "workspace:*"
+		"@trektoeic/auth": "workspace:*",
+		"@trektoeic/db": "workspace:*"
 	}
 }
