--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@trektoiec/db",
+	"name": "@trektoeic/db",
 	"type": "module",
 	"exports": {
 		".": {
@@ -7,6 +7,15 @@
 		},
 		"./*": {
 			"default": "./src/*.ts"
+		},
+		"./schema/*": {
+			"default": "./src/schema/*.ts"
+		},
+		"./queries/toeic-max-tokens/*": {
+			"default": "./src/queries/toeic-max-tokens/*.ts"
+		},
+		"./queries/toeic-max-tokens": {
+			"default": "./src/queries/toeic-max-tokens/index.ts"
 		}
 	},
 	"scripts": {
@@ -20,7 +29,7 @@
 	"devDependencies": {
 		"drizzle-kit": "^0.31.2",
 		"@types/pg": "^8.11.11",
-		"@trektoiec/config": "workspace:*"
+		"@trektoeic/config": "workspace:*"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
@@ -29,6 +38,7 @@
 		"drizzle-orm": "^0.44.2",
 		"pg": "^8.14.1",
 		"zod": "^4.1.11",
-		"@trektoiec/env": "workspace:*"
+		"@trektoeic/env": "workspace:*",
+		"@trektoeic/utils": "workspace:*"
 	}
 }
