--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@trektoiec/schemas",
+	"name": "@trektoeic/schemas",
 	"exports": {
 		".": {
 			"default": "./src/index.ts"
@@ -11,7 +11,7 @@
 	"type": "module",
 	"scripts": {},
 	"devDependencies": {
-		"@trektoiec/config": "workspace:*"
+		"@trektoeic/config": "workspace:*"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
