--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,10 +3,12 @@ packages:
   - 'packages/*'
 
 catalog:
-  '@orpc/server': ^1.10.0
-  '@orpc/client': ^1.10.0
-  '@orpc/openapi': ^1.10.0
-  '@orpc/zod': ^1.10.0
-  "@orpc/json-schema": "^1.10.0"
+  '@orpc/server': ^1.12.3
+  '@orpc/client': ^1.12.3
+  '@orpc/openapi': ^1.12.3
+  '@orpc/zod': ^1.12.3
+  '@orpc/json-schema': ^1.12.3
+  '@orpc/tanstack-query': ^1.12.3
+  "@orpc/experimental-pino": ^1.12.3
   better-auth: ^1.4.5
   dotenv: ^17.2.2
