fix: correct typo in .env.example and add SimpleCsrfProtectionLinkPlugin to orpc client

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -3,7 +3,7 @@ BETTER_AUTH_URL=
 CORS_ORIGIN=
 DATABASE_URL=
 
-# CLOUNDFLARE
+# CLOUDFLARE
 CLOUDFLARE_BUCKET_NAME=
 CLOUDFLARE_ACCOUNT_ID=
 CLOUDFLARE_ACCESS_KEY_ID=
