--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,17 +52,20 @@
 		"@tanstack/router-plugin": "^1.132.31",
 		"@trektoeic/api": "workspace:*",
 		"@trektoeic/auth": "workspace:*",
+		"@trektoeic/schemas": "workspace:*",
 		"@trektoeic/uploads": "workspace:*",
 		"@trektoeic/utils": "workspace:*",
-		"@trektoeic/schemas": "workspace:*",
+		"@vercel/analytics": "^1.6.1",
 		"ahooks": "^3.9.6",
 		"better-auth": "catalog:",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
+		"dayjs": "^1.11.19",
 		"embla-carousel-react": "^8.6.0",
 		"framer-motion": "^12.23.25",
+		"idb-keyval": "^6.2.2",
 		"input-otp": "^1.4.2",
 		"motion": "^12.23.25",
 		"next-themes": "^0.4.6",
@@ -81,6 +84,7 @@
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.3",
 		"tw-animate-css": "^1.2.5",
+		"unstorage": "^1.17.3",
 		"vaul": "^1.1.2",
 		"vite-plugin-barrel": "^0.4.1",
 		"vite-tsconfig-paths": "^5.1.4",
