--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -69,6 +69,7 @@
 		"framer-motion": "^12.23.25",
 		"idb-keyval": "^6.2.2",
 		"input-otp": "^1.4.2",
+		"lucide-react": "^0.562.0",
 		"motion": "^12.23.25",
 		"next-themes": "^0.4.6",
 		"nitro": "^3.0.1-alpha.1",
@@ -76,7 +77,7 @@
 		"pg": "^8.14.1",
 		"radix-ui": "^1.4.2",
 		"react": "19.1.2",
-		"react-day-picker": "^9.11.3",
+		"react-day-picker": "^9.13.0",
 		"react-dom": "19.1.2",
 		"react-error-boundary": "^6.0.0",
 		"react-hook-form": "^7.68.0",
